--- a/TestBrowser/Assets/base.css
+++ b/TestBrowser/Assets/base.css
@@ -1,3 +1,15 @@
 table, th, td {
-    border: 1px solid black;
+    border: 1px solid #eee;
+     border-collapse: collapse;
+}
+
+table tr:nth-child(even) {
+    background-color: #eee;
+}
+table tr:nth-child(odd) {
+    background-color: #fff;
+}
+table th {
+    color: black;
+    background-color: #fff;
 }
